Added customizer settings

--- a/templates/components/common/my-component.html
+++ b/templates/components/common/my-component.html
@@ -4,7 +4,7 @@
             <div class="image-container img-1"></div>
             <div class="content-area">
                 <div class="title">Interior<br>Lighting</div>
-                <button class="btn-shop">Shop Now</button>
+                <button class="btn-shop" id="btn-shop-text">{{theme_settings.btn-shop-text}}</button>
             </div>
         </div>
 
@@ -12,7 +12,7 @@
             <div class="image-container img-2"></div>
             <div class="content-area">
                 <div class="title">Exterior<br>Lighting</div>
-                <button class="btn-shop">Shop Now</button>
+                <button class="btn-shop" id="btn-shop-text">{{theme_settings.btn-shop-text}}</button>
             </div>
         </div>
 
@@ -20,7 +20,7 @@
             <div class="image-container img-3"></div>
             <div class="content-area">
                 <div class="title">Decorative<br>Lights</div>
-                <button class="btn-shop">Shop Now</button>
+                <button class="btn-shop" id="btn-shop-text">{{theme_settings.btn-shop-text}}</button>
             </div>
         </div>
     </div>
